[package]
name = "pinball2d"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.6", features = ["dynamic"] }
bevy_rapier2d = "0.12.1"
bevy_prototype_lyon = "0.4.0"
heron = { version = "2.0.0", features = ["2d"] }
